# OpenTinker

./: .gitignore  LICENSE  README.md  agents.md  mkdocs.yml  pyproject.toml  requirements.txt
configs/ray/: learner2_sampler6.yaml  qwen35_35b_a3b.yaml
configs/rl/: first_run.yaml
docs/: api.md  benchmarks.md  index.md  quickstart.md  runtime_scaling.md
docs/recipes/: losses.md  rendering.md  rl.md  training_sampling.md
rinker/: __init__.py  __main__.py
rinker/api/: __init__.py  sampling_client.py  service_client.py  training_client.py
rinker/cli/: __init__.py  config.py  main.py
rinker/core/: __init__.py  engine.py  lora.py  losses.py  model_zoo.py  types.py
rinker/core/rendering/: __init__.py  base.py  llama.py  qwen.py  qwen_vl.py
rinker/distillation/: __init__.py  trainer.py
rinker/eval/: __init__.py  inline.py  offline.py
rinker/examples/: rl_basic.py  rl_loop_ray.py  rlhf_toy.py  rlvr_math.py  sl_basic.py  twenty_questions.py
rinker/ray_runtime/: __init__.py  actors.py  config.py  runtime.py
rinker/recipes/: __init__.py  rl_loop.py
rinker/recipes/rl/: __init__.py  train.py
rinker/rl/: __init__.py  dataset.py  env.py  utils.py
rinker/tests/: test_checkpoint_eval.py  test_distillation.py  test_examples.py  test_losses.py  test_ray_runtime.py  test_rendering.py  test_sampling.py
rinker/utils/: __init__.py  checkpointing.py  futures.py  seeding.py  telemetry.py  tokenizer.py
